// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`API should add an API 1`] = `
Array [
  Object {
    "params": Object {
      "body": Object {
        "hosts": Array [
          "mockbin.com",
        ],
        "name": "mockbin",
        "upstream_url": "http://mockbin.com",
      },
      "endpoint": Object {
        "name": "apis",
      },
      "method": "POST",
    },
    "type": "action",
  },
  Object {
    "content": Object {
      "created_at": "___IGNORED___",
      "hosts": Array [
        "mockbin.com",
      ],
      "http_if_terminated": true,
      "https_only": false,
      "id": "___IGNORED___",
      "name": "mockbin",
      "preserve_host": false,
      "retries": 5,
      "strip_uri": true,
      "upstream_connect_timeout": 60000,
      "upstream_read_timeout": 60000,
      "upstream_send_timeout": 60000,
      "upstream_url": "http://mockbin.com",
    },
    "type": "response-ok",
  },
]
`;

exports[`API should add an API 2`] = `
Object {
  "apis": Array [
    Object {
      "_info": Object {
        "created_at": "___IGNORED___",
        "id": "___IGNORED___",
      },
      "attributes": Object {
        "hosts": Array [
          "mockbin.com",
        ],
        "http_if_terminated": true,
        "https_only": false,
        "preserve_host": false,
        "retries": 5,
        "strip_uri": true,
        "upstream_connect_timeout": 60000,
        "upstream_read_timeout": 60000,
        "upstream_send_timeout": 60000,
        "upstream_url": "http://mockbin.com",
      },
      "name": "mockbin",
      "plugins": Array [],
    },
  ],
  "consumers": Array [],
  "plugins": Array [],
}
`;

exports[`API should add an API with a plugins 1`] = `
Array [
  Object {
    "params": Object {
      "body": Object {
        "hosts": Array [
          "mockbin.com",
        ],
        "name": "mockbin",
        "upstream_url": "http://mockbin.com",
      },
      "endpoint": Object {
        "name": "apis",
      },
      "method": "POST",
    },
    "type": "action",
  },
  Object {
    "content": Object {
      "created_at": "___IGNORED___",
      "hosts": Array [
        "mockbin.com",
      ],
      "http_if_terminated": true,
      "https_only": false,
      "id": "___IGNORED___",
      "name": "mockbin",
      "preserve_host": false,
      "retries": 5,
      "strip_uri": true,
      "upstream_connect_timeout": 60000,
      "upstream_read_timeout": 60000,
      "upstream_send_timeout": 60000,
      "upstream_url": "http://mockbin.com",
    },
    "type": "response-ok",
  },
  Object {
    "params": Object {
      "body": Object {
        "config": Object {
          "key_names": Array [
            "foobar",
          ],
        },
        "name": "key-auth",
      },
      "endpoint": Object {
        "name": "api-plugins",
        "params": Object {
          "apiId": "___IGNORED___",
          "pluginName": "key-auth",
        },
      },
      "method": "POST",
    },
    "type": "action",
  },
  Object {
    "content": Object {
      "api_id": "___IGNORED___",
      "config": Object {
        "anonymous": "",
        "hide_credentials": false,
        "key_in_body": false,
        "key_names": Array [
          "foobar",
        ],
      },
      "created_at": "___IGNORED___",
      "enabled": true,
      "id": "___IGNORED___",
      "name": "key-auth",
    },
    "type": "response-ok",
  },
  Object {
    "params": Object {
      "body": Object {
        "config": Object {
          "credentials": false,
          "max_age": 7000,
          "preflight_continue": false,
        },
        "name": "cors",
      },
      "endpoint": Object {
        "name": "api-plugins",
        "params": Object {
          "apiId": "___IGNORED___",
          "pluginName": "cors",
        },
      },
      "method": "POST",
    },
    "type": "action",
  },
  Object {
    "content": Object {
      "api_id": "___IGNORED___",
      "config": Object {
        "credentials": false,
        "max_age": 7000,
        "preflight_continue": false,
      },
      "created_at": "___IGNORED___",
      "enabled": true,
      "id": "___IGNORED___",
      "name": "cors",
    },
    "type": "response-ok",
  },
]
`;

exports[`API should add an API with a plugins 2`] = `
Object {
  "apis": Array [
    Object {
      "_info": Object {
        "created_at": "___IGNORED___",
        "id": "___IGNORED___",
      },
      "attributes": Object {
        "hosts": Array [
          "mockbin.com",
        ],
        "http_if_terminated": true,
        "https_only": false,
        "preserve_host": false,
        "retries": 5,
        "strip_uri": true,
        "upstream_connect_timeout": 60000,
        "upstream_read_timeout": 60000,
        "upstream_send_timeout": 60000,
        "upstream_url": "http://mockbin.com",
      },
      "name": "mockbin",
      "plugins": Array [
        Object {
          "_info": Object {
            "created_at": "___IGNORED___",
            "id": "___IGNORED___",
          },
          "attributes": Object {
            "config": Object {
              "anonymous": "",
              "hide_credentials": false,
              "key_in_body": false,
              "key_names": Array [
                "foobar",
              ],
            },
            "enabled": true,
          },
          "name": "key-auth",
        },
        Object {
          "_info": Object {
            "created_at": "___IGNORED___",
            "id": "___IGNORED___",
          },
          "attributes": Object {
            "config": Object {
              "credentials": false,
              "max_age": 7000,
              "preflight_continue": false,
            },
            "enabled": true,
          },
          "name": "cors",
        },
      ],
    },
  ],
  "consumers": Array [],
  "plugins": Array [],
}
`;
